--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,22 @@
 name = "advent_of_code"
 version = "0.1.0"
 edition = "2021"
+author = ["Johan Cervantes"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "advent_of_code"
+path = "src/lib.rs"
+
+[[bin]]
+name = "advent_of_code_solver"
+path = "src/main.rs"
 
 [dependencies]
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "day01"
+harness = false
